# stock-advisor-app

./: .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  scheduler.py
backend/app/analysis/: __init__.py  base.py  etf_fundamental.py  event_awareness.py  fundamental_equity.py  insider_institutional.py  macro.py  mean_reversion.py  momentum.py  news_sentiment.py  quality.py  registry.py  risk_metrics.py  social_sentiment.py  technical.py  volatility_regime.py
backend/app/data/: curated_etfs.json
backend/app/models/: __init__.py  base.py  run_log.py  suggestion.py  watchlist.py
backend/app/providers/: __init__.py  alphavantage.py  base.py  cache.py  edgar.py  finnhub.py  fmp.py  fred.py  newsapi.py  rate_limiter.py  reddit.py  registry.py  simfin.py  yfinance_provider.py
backend/app/routes/: health.py  providers.py  run.py  runs.py  suggestions.py  validations.py  watchlist.py
backend/app/services/: daily_pipeline.py  snapshot.py  ticker_pipeline.py  universe.py  validation_pipeline.py
backend/app/synthesis/: __init__.py  anthropic_client.py  gemini_client.py  llm.py  ollama_client.py  openai_client.py  openrouter_client.py  orchestrator.py  pricing.py  scorer.py  thesis.py  weights.py
backend/app/validation/: __init__.py  calibration.py  outcome.py  recalibration.py  sweep.py
backend/scripts/: validate_providers.py
backend/tests/: test_analysis_modules.py  test_cache.py  test_health.py  test_rate_limiter.py  test_synthesis.py  test_universe.py  test_validation.py
(+19 files in other folders)
